// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`releases/util.js convertAllReleasesGraphQLResponse matches snapshot 1`] = `
Object {
  "data": Array [
    Object {
      "_links": Object {
        "closedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.1&scope=all&state=closed",
        "closedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=closed",
        "editUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/edit",
        "mergedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=merged",
        "openedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.1&scope=all&state=opened",
        "openedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=opened",
        "self": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
        "selfUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
      },
      "assets": Object {
        "count": 8,
        "links": Array [
          Object {
            "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-3",
            "external": true,
            "id": "gid://gitlab/Releases::Link/13",
            "linkType": "image",
            "name": "Image",
            "url": "https://example.com/image",
          },
          Object {
            "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-2",
            "external": true,
            "id": "gid://gitlab/Releases::Link/12",
            "linkType": "package",
            "name": "Package",
            "url": "https://example.com/package",
          },
          Object {
            "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-1",
            "external": false,
            "id": "gid://gitlab/Releases::Link/11",
            "linkType": "runbook",
            "name": "Runbook",
            "url": "http://localhost/releases-namespace/releases-project/runbook",
          },
          Object {
            "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/linux-amd64",
            "external": true,
            "id": "gid://gitlab/Releases::Link/10",
            "linkType": "other",
            "name": "linux-amd64 binaries",
            "url": "https://downloads.example.com/bin/gitlab-linux-amd64",
          },
        ],
        "sources": Array [
          Object {
            "format": "zip",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.zip",
          },
          Object {
            "format": "tar.gz",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar.gz",
          },
          Object {
            "format": "tar.bz2",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar.bz2",
          },
          Object {
            "format": "tar",
            "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar",
          },
        ],
      },
      "author": Object {
        "avatarUrl": "https://www.gravatar.com/avatar/16f8e2050ce10180ca571c2eb19cfce2?s=80&d=identicon",
        "username": "administrator",
        "webUrl": "http://localhost/administrator",
      },
      "commit": Object {
        "shortId": "b83d6e39",
        "title": "Merge branch 'branch-merged' into 'master'",
      },
      "commitPath": "http://localhost/releases-namespace/releases-project/-/commit/b83d6e391c22777fca1ed3012fce84f633d7fed0",
      "descriptionHtml": "<p data-sourcepos=\\"1:1-1:33\\" dir=\\"auto\\">Best. Release. <strong>Ever.</strong> <gl-emoji title=\\"rocket\\" data-name=\\"rocket\\" data-unicode-version=\\"6.0\\">🚀</gl-emoji></p>",
      "evidences": Array [
        Object {
          "collectedAt": "2018-12-03T00:00:00Z",
          "filepath": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/evidences/1.json",
          "sha": "760d6cdfb0879c3ffedec13af470e0f71cf52c6cde4d",
        },
      ],
      "milestones": Array [
        Object {
          "description": "The 12.4 milestone",
          "id": "gid://gitlab/Milestone/124",
          "issueStats": Object {
            "closed": 1,
            "total": 4,
          },
          "stats": undefined,
          "title": "12.4",
          "webPath": undefined,
          "webUrl": "/releases-namespace/releases-project/-/milestones/2",
        },
        Object {
          "description": "The 12.3 milestone",
          "id": "gid://gitlab/Milestone/123",
          "issueStats": Object {
            "closed": 3,
            "total": 5,
          },
          "stats": undefined,
          "title": "12.3",
          "webPath": undefined,
          "webUrl": "/releases-namespace/releases-project/-/milestones/1",
        },
      ],
      "name": "The first release",
      "releasedAt": "2018-12-10T00:00:00Z",
      "tagName": "v1.1",
      "tagPath": "/releases-namespace/releases-project/-/tags/v1.1",
      "upcomingRelease": true,
    },
  ],
  "paginationInfo": Object {
    "endCursor": "eyJpZCI6IjEifQ",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6IjEifQ",
  },
}
`;

exports[`releases/util.js convertOneReleaseGraphQLResponse matches snapshot 1`] = `
Object {
  "data": Object {
    "_links": Object {
      "closedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.1&scope=all&state=closed",
      "closedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=closed",
      "editUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/edit",
      "mergedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=merged",
      "openedIssuesUrl": "http://localhost/releases-namespace/releases-project/-/issues?release_tag=v1.1&scope=all&state=opened",
      "openedMergeRequestsUrl": "http://localhost/releases-namespace/releases-project/-/merge_requests?release_tag=v1.1&scope=all&state=opened",
      "self": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
      "selfUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1",
    },
    "assets": Object {
      "count": 8,
      "links": Array [
        Object {
          "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-3",
          "external": true,
          "id": "gid://gitlab/Releases::Link/13",
          "linkType": "image",
          "name": "Image",
          "url": "https://example.com/image",
        },
        Object {
          "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-2",
          "external": true,
          "id": "gid://gitlab/Releases::Link/12",
          "linkType": "package",
          "name": "Package",
          "url": "https://example.com/package",
        },
        Object {
          "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/awesome-app-1",
          "external": false,
          "id": "gid://gitlab/Releases::Link/11",
          "linkType": "runbook",
          "name": "Runbook",
          "url": "http://localhost/releases-namespace/releases-project/runbook",
        },
        Object {
          "directAssetUrl": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/downloads/binaries/linux-amd64",
          "external": true,
          "id": "gid://gitlab/Releases::Link/10",
          "linkType": "other",
          "name": "linux-amd64 binaries",
          "url": "https://downloads.example.com/bin/gitlab-linux-amd64",
        },
      ],
      "sources": Array [
        Object {
          "format": "zip",
          "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.zip",
        },
        Object {
          "format": "tar.gz",
          "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar.gz",
        },
        Object {
          "format": "tar.bz2",
          "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar.bz2",
        },
        Object {
          "format": "tar",
          "url": "http://localhost/releases-namespace/releases-project/-/archive/v1.1/releases-project-v1.1.tar",
        },
      ],
    },
    "author": Object {
      "avatarUrl": "https://www.gravatar.com/avatar/16f8e2050ce10180ca571c2eb19cfce2?s=80&d=identicon",
      "username": "administrator",
      "webUrl": "http://localhost/administrator",
    },
    "commit": Object {
      "shortId": "b83d6e39",
      "title": "Merge branch 'branch-merged' into 'master'",
    },
    "commitPath": "http://localhost/releases-namespace/releases-project/-/commit/b83d6e391c22777fca1ed3012fce84f633d7fed0",
    "descriptionHtml": "<p data-sourcepos=\\"1:1-1:33\\" dir=\\"auto\\">Best. Release. <strong>Ever.</strong> <gl-emoji title=\\"rocket\\" data-name=\\"rocket\\" data-unicode-version=\\"6.0\\">🚀</gl-emoji></p>",
    "evidences": Array [
      Object {
        "collectedAt": "2018-12-03T00:00:00Z",
        "filepath": "http://localhost/releases-namespace/releases-project/-/releases/v1.1/evidences/1.json",
        "sha": "760d6cdfb0879c3ffedec13af470e0f71cf52c6cde4d",
      },
    ],
    "milestones": Array [
      Object {
        "description": "The 12.4 milestone",
        "id": "gid://gitlab/Milestone/124",
        "issueStats": Object {
          "closed": 1,
          "total": 4,
        },
        "stats": undefined,
        "title": "12.4",
        "webPath": undefined,
        "webUrl": "/releases-namespace/releases-project/-/milestones/2",
      },
      Object {
        "description": "The 12.3 milestone",
        "id": "gid://gitlab/Milestone/123",
        "issueStats": Object {
          "closed": 3,
          "total": 5,
        },
        "stats": undefined,
        "title": "12.3",
        "webPath": undefined,
        "webUrl": "/releases-namespace/releases-project/-/milestones/1",
      },
    ],
    "name": "The first release",
    "releasedAt": "2018-12-10T00:00:00Z",
    "tagName": "v1.1",
    "tagPath": "/releases-namespace/releases-project/-/tags/v1.1",
    "upcomingRelease": true,
  },
}
`;
